ggplot2 1.0.1.9xxx
----------------------------------------------------------------

* The default themes has been tweaked in various minor ways. The legend
  title and axis titles are now given the same treatment. The default
  font size has been dropped from 12 to 11. The axes labels are now
  darker.

* Sizes in ggplot2 are measured in mm. Previously they were converted to
  pts (for use in grid) by multiplying by 72 / 25.4. However, grid uses
  printer's points, not Adobe (big pts), so sizes are now multiplied by
  72.27 / 25.4.

* In legend for bars and rectangles, display border colour as border,
  rather than strikethrough.

* ggplot no longer throws an error if you your plot doesn't have any
  layers.  Instead it automatically adds `geom_blank()` (#1246)

* `geom_smooth()` is no longer so chatty. If you want to know what the deafult
  smoothing method is, look it up in the documentation! (#1247)

* `geom_smooth()`/`stat_smooth()` no longer pass ... on to the
  underlying model. Instead, put additional arguments in `method.args` (#1245).

* `element_text()` gains a margins argument which allows you to add additional
  margins around text elements in the plot. The default themes have been
  adjusted to add a little extra spacing between titles and text so the plots
  don't feel so cramped. The default margins scale with the theme font size,
  so the appearance at larger font sizes should be considerably improved
  (#1228). As part of these changes `axis.ticks.margin` has been deprecated:
  now use the margin property of `axis.ticks`.

* ggplot2 re-exports grid `arrow()` and `unit()` so you don't need to attach
  grid or use `grid::` for these commonly used functions (#1225)

* `geom_histogram()` and `geom_smooth()` now only inform you about the
  default values once per layer, rather than once per panel (#1220).

* `geom_bar()` and `geom_histogram()` no longer share `stat_bin()`. Now
  `geom_bar()` has its own stat, `stat_bar()`. This is useful if you want to